--- a/_MOB_paper.Rnw
+++ b/_MOB_paper.Rnw
@@ -55,13 +55,13 @@ options(prompt=" ", continue = " ")
 \label{sec:Introduction}
 
 Model-based recursive partitioning \citep[MOB,][]{ZeilyHoth08} is a semi-parametric approach for detecting differences in the parameters of a statistical
-model between groups of persons. This method is a generalization of the principle of recursive partitioning, that is also used in classification and regression trees \citet{Breetal:1984}. 
+model between groups of persons. This method is a generalization of the principle of recursive partitioning, that is also used in classification and regression trees \citep{Breetal:1984}. 
 In classification and regression trees, the aim is to detect groups of persons, specified by (combinations of) covariates, that differ in a response variable. An example could be that children who are highly motivated and have good reading skills show higher average math exam grades. 
 MOB generalizes this idea by identifying groups of persons, specified by (combinations of) covariates, that differ in a the parameters of a statistical model. An example could be that children who are highly motivated and have good reading skills show higher slopes in a regression model relating the time spent studying to math exam grades. 
 
-The framework of MOB is very flexible and can be applied in combination with a variety of statistical models, such as linear and generalized linear regression \citep{KopAugStr:2013,ZeilyHoth08} or models for paired-comparison data \citep{StrWicZei:2011:JoEaBS}. In this article, we will highlight two such combinations that we consider particularly relevant for research in school psychology: MOB for mixed-effects models \cite{FokkySmit18} and for models from Rasch measurement and Item Response Theory \citep[IRT,][]{StrKopZei:2015:P,KomStrZei:2017:EaPM,HenDebStr:2023:EPM}. Mixed-effects models become relevant whenever data are collected in repeated measures or nested data structures, for example when children are tested at several time points (so that time points are nested in children) and/or when children from different classes from different schools (so that children are nested in classes, which are again nested in schools) participate in a study. In application example 1 we will illustrate how MOB can be used to detect subgroup-specific intervention effects while taking into account the nested data structure. 
+The framework of MOB is very flexible and can be applied in combination with a variety of statistical models, such as linear and generalized linear regression \citep{KopAugStr:2013,ZeilyHoth08} or models for paired-comparison data \citep{StrWicZei:2011:JoEaBS}. In this article, we will highlight two such combinations that we consider particularly relevant for research in school psychology: MOB for mixed-effects models \citep{FokkySmit18} and for models from Rasch measurement and Item Response Theory \citep[IRT,][]{StrKopZei:2015:P,KomStrZei:2017:EaPM,HenDebStr:2023:EPM}. Mixed-effects models become relevant whenever data are collected in repeated measures or nested data structures, for example when children are tested at several time points (so that time points are nested in children) and/or when children from different classes from different schools (so that children are nested in classes, which are again nested in schools) participate in a study. In application example 1 we will illustrate how MOB can be used to detect subgroup-specific intervention effects while taking into account the nested data structure. 
 
-While for this first application example we assume that the administered test \todo{should we call a psychological test a test/an instrument/??? to distinguish it from the verb and noun for statistical test?} has already been thoroughly validated, for application example 2 we go back in the research process to the point where a new test is administered to a validation sample. Before using the test in our research, we need to make sure that test results are comparable, for example between children of different genders. If certain items pose an advantage or disadvantage to either group, they are said to violate measurement invariance or exhibit differential item functioning (DIF). In order to test for DIF in the framework of Item Response Theory or Rasch modelling \cite{AnthyDiPe16,DebStrZei:2022:CRC,Mall97}, groups of persons are compared with respect to the item parameters for their specific group. This can be done in a way that allows to detect DIF on top of any true group differences in ability. While many standard approaches for testing DIF are limited to comparing typically two pre-specified groups at a time, we will show in application example 2 that MOB more flexibly allows to detect groups of persons with different item parameters in a data-driven 
+While for this first application example we assume that the administered test \todo{should we call a psychological test a test/an instrument/??? to distinguish it from the verb and noun for statistical test? (Mirka: I like the term instrument to distinguish it from a statistical test)} has already been thoroughly validated, for application example 2 we go back in the research process to the point where a new test is administered to a validation sample. Before using the test in our research, we need to make sure that test results are comparable, for example between children of different genders. If certain items pose an advantage or disadvantage to either group, they are said to violate measurement invariance or exhibit differential item functioning (DIF). In order to test for DIF in the framework of Item Response Theory or Rasch modelling \citep{AnthyDiPe16,DebStrZei:2022:CRC,Mall97}, groups of persons are compared with respect to the item parameters for their specific group. This can be done in a way that allows to detect DIF on top of any true group differences in ability. While many standard approaches for testing DIF are limited to comparing typically two pre-specified groups at a time, we will show in application example 2 that MOB more flexibly allows to detect groups of persons with different item parameters in a data-driven 
 way. 
 
 In the following section, we will give a short introduction into the algorithm and statistical concepts behind MOB. Readers interested in learning more about its predecessor method, classification and regression trees, are referred to the introduction by \citet{StrMalTut:2009:PM}. An alternative framework for detecting groups of persons with different model parameters is mixture modelling \citep[see, e.g.,][in the context of Rasch modelling]{AyalySant17,FriStrZei:2015:EaPM}. Mixture modelling aims at identifying latent classes of persons with different properties. It can also be combined with covariates. A comparison of both approches is given by \citet{FriStrZei:2014}.
@@ -69,7 +69,7 @@ In the following section, we will give a short introduction into the algorithm a
 
 \section{The Algorithm Behind MOB}
 
-What you see displayed in Figures~\ref{fig:lmm_tree}, \ref{fig:math_tree}, and \ref{fig:read_tree}\todo{adjust if raschtree example changes}, which will be explained in detail in the application example sections, is the result of the MOB algorithm for a linear mixed-effects model (Figure~\ref{fig:lmm_tree}) and for a binary Rasch model (Figures~\ref{fig:math_tree} and \ref{fig:read_tree}). These figures share the tree-structure in the upper part, but differ in their lower part. The starting point of the tree structure is at the very top of each tree. The very top of each tree is called the root node, so what you see are actually ``upside down'' trees with the root at the top and the branches at the 
+What you see displayed in Figures~\ref{fig:lmm_tree}, \ref{fig:math_tree}, and \ref{fig:read_tree}\todo{adjust if raschtree example changes (Mirka: maybe it would be helpful to have a simplified figure of a GLMERtree and a Raschtree early in the manuscript already, so we can refer to it here?)}, which will be explained in detail in the application example sections, is the result of the MOB algorithm for a linear mixed-effects model (Figure~\ref{fig:lmm_tree}) and for a binary Rasch model (Figures~\ref{fig:math_tree} and \ref{fig:read_tree}). These figures share the tree-structure in the upper part, but differ in their lower part. The starting point of the tree structure is at the very top of each tree. The very top of each tree is called the root node, so what you see are actually ``upside down'' trees with the root at the top and the branches at the 
 bottom. The root node at the very top contains the entire sample of persons in the data set. From there, the persons are divided into subgroups.
 
 The subgroups are defined by the covariates that are used for splitting and together with cutpoints in those covariates. For example, in Figure~\ref{fig:lmm_tree} for the metric covariates \texttt{AFTQ} and \texttt{Income} a numeric cutpoint has been selected by the MOB algorithm to separate the groups. The algorithm has identified this cutpoint as being the location of the strongest parameter difference between the two resulting groups. The categorical covariate \texttt{Race}, which was coded in three categories in this example, has been divided into two groups of categories: Black and Hispanic vs.~White. For a binary covariate, \todo{like ... -- add name if is there one in the other example?} 
@@ -80,7 +80,7 @@ The fact that the Figures display more than one end node already means that one 
 
 The way the variable selection and cutpoint selection steps are separated in modern classification and regression tree and MOB algorithms, including the ones used here, distinguish them from the traditional classification and regression tree algorithms of \citet{Breetal:1984} and \citet{Qui:1993}. The traditional algorithms performed variable and cutpoint selection in one step. However, this leads to an undesirable behavior called variable selection bias. It means that the traditional algorithms prefer variables offering more cutpoints in the selection process -- regardless of their true information content. An algorithm that still has this problem is, for example, the \texttt{rpart} algorithm in R, based on the original CART algorithm by \citet{Breetal:1984}. Modern algorithms for classification and regression trees that have solved this problem are the unbiased approaches \texttt{QUEST} \citep{LohShi:1997}, which is available in SPSS, and \texttt{ctree} \citep{Hotetal:2006}, available in R in the \texttt{party} and \texttt{partykit} packages \citep{partykit:pkg}. The latter forms the basis for all MOB approaches presented in this paper. 
 
-Once there are no more covariates that show a significant structural change in any node, the MOB algorithm stops splitting. In this way, the MOB algorithm selects only those variables that are relevant for distinguishing the groups, i.e., it performs automatic variable selection. Moreover, the trees will not grow as large as possible, but will stop when no more significant structural change is detected. This is the second difference between the modern classification and regression tree and MOB algorithms used here, compared to traditional classification and regression tree algorithms like those of \citet{Breetal:1984} and \citet{Qui:1993}: While the traditional algorithms grew very large trees and then cut them back by means of so called pruning, the framework employed here is based on statistical significance tests and party also on effect size measures (see application example 2) to stop the trees already in the growing phase when no more significant change can be detected. Other stopping criteria are based on the number of persons in the end nodes. These crieria ensure that the sample sizes in the end nodes are large enough to estimate the statistical model in each end node.\todo{we should discuss this in the application examples; there are some defaults but for models with many parameters it might make sense to increase them}
+Once there are no more covariates that show a significant structural change in any node, the MOB algorithm stops splitting. In this way, the MOB algorithm selects only those variables that are relevant for distinguishing the groups, i.e., it performs automatic variable selection. Moreover, the trees will not grow as large as possible, but will stop when no more significant structural change is detected. This is the second difference between the modern classification and regression tree and MOB algorithms used here, compared to traditional classification and regression tree algorithms like those of \citet{Breetal:1984} and \citet{Qui:1993}: While the traditional algorithms grew very large trees and then cut them back by means of so called pruning, the framework employed here is based on statistical significance tests and partly also on effect size measures (see application example 2) to stop the trees already in the growing phase when no more significant change can be detected. Other stopping criteria are based on the number of persons in the end nodes. These crieria ensure that the sample sizes in the end nodes are large enough to estimate the statistical model in each end node.\todo{we should discuss this in the application examples; there are some defaults but for models with many parameters it might make sense to increase them}
 
 In summary, the rationale of a MOB algorithm consists of the following steps:
 
@@ -89,9 +89,7 @@ In summary, the rationale of a MOB algorithm consists of the following steps:
   \item The model parameters are first estimated jointly for all persons in the current node, starting with the full sample.
   \item Structural change in the model parameters is assessed with respect to each available covariate.
   \item If there is significant structural change, groups are split along the covariate with the strongest change and using the optimal cutpoint.
-  \item Steps 1--3 are repeated recursively in the resulting groups
-        until there is no more significant structural change (or the
-   groups becomes too small).
+  \item Steps 1--3 are repeated recursively in the resulting groups until there is no more significant structural change (or the groups becomes too small).
 \end{enumerate}
 
 For more details on the statistical theory behind unbiased classification and regression trees and MOB, see \citet{Hotetal:2006,StrMalTut:2009:PM,StroyKopf15}.  
@@ -124,13 +122,13 @@ When mixed-effects models are combined with MOB, ...
 
 Before being able to use a psychological or educational test for comparing different groups of persons in a fair way, different assumptions of the measurement model have to be checked. In the framework of IRT and Rasch measurement, test items are typically investigated with respect item misfit, multidimensionality and other violations of the measurement model \citep[cf., e.g.,][for an introduction]{DebStrZei:2022:CRC}. Another assumption that is particularly crucial for the comparability of test scores between groups is measurement invariance. Items that violate measurement invariance by showing different measurement properties for different groups of participants display DIF.
 
-MOB can be used to detect DIF by means of searching for covariates that display structural change in the item parameters of the measurement model. For the Rasch measurement model, the R function for conducting the MOB analysis is the \texttt{raschtree} function from R package \texttt{psychotree} \citep{StroyKopf15} \todo{should we cite the package too or only the paper?} The usage of this function will be illustration in application example 2. We will see that, just like for the mixed-effects model trees \todo{use same names for methods everywhere}, we need to specify which variables go into the parametric mode. In the case of the Rasch model, this will be the test items. Moreover, we need to specify, which variables are made available to the MOB algorithm for selecting relevant splitting variables and cutpoints. 
+MOB can be used to detect DIF by means of searching for covariates that display structural change in the item parameters of the measurement model. For the Rasch measurement model, the R function for conducting the MOB analysis is the \texttt{raschtree} function from R package \texttt{psychotree} \citep{StroyKopf15} \todo{should we cite the package too or only the paper?} The usage of this function will be illustration in application example 2. We will see that, just like for the mixed-effects model trees\todo{use same names for methods everywhere}, we need to specify which variables go into the parametric mode. In the case of the Rasch model, this will be the test items. Moreover, we need to specify, which variables are made available to the MOB algorithm for selecting relevant splitting variables and cutpoints. 
 
-If one joint Rasch model holds for the entire sample, i.e., if there is no DIF a Rasch tree should show no splits. However, in certain settings in educational research, such as large scale assessements, very large sample sizes are available for testing for DIF. Large sample sizes are good for detecting even small effects or model violations with a high statistical power. The same holds for the statistical tests used for detecting parameter change in the MOB algorithm, so that in larger samples even very small parameter differences can be detected with large samples. However, in DIF detection this may mean that even very small DIF effects, that in practice can be considered ignorable, will be detected if only the sample is big enough. As we will illustrate in the first part of application example 2, for a large sample of university students \todo{are only students in the sample?} who have taken a quiz to test their general knowledge, this can lead to very large trees, that are hard to interpret and contain splits that would not be considered relevant by measurement experts. Therefore, an extension of Rasch trees has been suggested by \citet{HennyDeba23} based on the Mantel-Haenszel effect size measure for DIF. \citet{HolTha:1985} have suggested an intuitive classification of DIF effect sizes based in the Mantel-Haenszel statistic, that is being widely used in educational testing. In this classification, category A stands for negligible DIF (small effect size or not statistically significant), B for medium DIF (neither A nor C), and C for large DIF (large effect size and statistically significant). \citet{HennyDeba23} have incorporated this classification as an additional stopping criterion for Rasch trees, so that the user can decide, for example, that a split should only be conducted if the detected DIF is of category B or C, while negligible DIF of category A should be ignored.\todo{Mirka: is it A vs. B,C or A,B vs. C by default?} 
+If one joint Rasch model holds for the entire sample, i.e., if there is no DIF a Rasch tree should show no splits. However, in certain settings in educational research, such as large scale assessements, very large sample sizes are available for testing for DIF. Large sample sizes are good for detecting even small effects or model violations with a high statistical power. The same holds for the statistical tests used for detecting parameter change in the MOB algorithm, so that in larger samples even very small parameter differences can be detected with large samples. However, in DIF detection this may mean that even very small DIF effects, that in practice can be considered ignorable, will be detected if only the sample is big enough. As we will illustrate in the first part of application example 2, for a large sample of university students \todo{are only students in the sample? (Mirka: I can take a subsample in which there are only students)} who have taken a quiz to test their general knowledge, this can lead to very large trees, that are hard to interpret and contain splits that would not be considered relevant by measurement experts. Therefore, an extension of Rasch trees has been suggested by \citet{HennyDeba23} based on the Mantel-Haenszel effect size measure for DIF. \citet{HolTha:1985} have suggested an intuitive classification of DIF effect sizes based in the Mantel-Haenszel statistic, that is being widely used in educational testing. In this classification, category A stands for negligible DIF (small effect size or not statistically significant), B for medium DIF (neither A nor C), and C for large DIF (large effect size and statistically significant). \citet{HennyDeba23} have incorporated this classification as an additional stopping criterion for Rasch trees, so that the user can decide, for example, that a split should only be conducted if the detected DIF is of category B or C, while negligible DIF of category A should be ignored.\todo{Mirka: is it A vs. B,C or A,B vs. C by default?; Response Mirka: A vs. BC is the default, but it can be changed} 
 
-As we will show in application example 2, for large sample sizes this can be very helpful because it results in shorter trees that are easier to interpret and contain only splits corresponding to DIF effect sizes considered relevant in practice. Together with a purification step \citet[see][for details]{HennyDeba23}, the Mantel-Haenszel classification can also be used for highlighting those items that show DIF with respect to certain groups of persons graphically. This can help generate hypothesis about the sources of DIF, as we will ilustrate in application example 2, and can also aid the decision how to proceed with the DIF items. For example, items that show DIF between different language groups can often be improved by means of making sure that in all translations the meaning is as similar as possible, that the words used in the different languages are equally frequently used, etc. In other situations, sources of DIF might be harder to eliminate, so that often DIF items are excluded from a test. Either way, the measurement model needs to be refitted and its assumptions checked again after the final set of items has been decided upon and, in the case of modified items, administered again. 
+As we will show in application example 2, for large sample sizes this can be very helpful because it results in shorter trees that are easier to interpret and contain only splits corresponding to DIF effect sizes considered relevant in practice. Together with a purification step \citep[see][for details]{HennyDeba23}, the Mantel-Haenszel classification can also be used for highlighting those items that show DIF with respect to certain groups of persons graphically. This can help generate hypothesis about the sources of DIF, as we will ilustrate in application example 2, and can also aid the decision how to proceed with the DIF items. For example, items that show DIF between different language groups can often be improved by means of making sure that in all translations the meaning is as similar as possible, that the words used in the different languages are equally frequently used, etc. In other situations, sources of DIF might be harder to eliminate, so that often DIF items are excluded from a test. Either way, the measurement model needs to be refitted and its assumptions checked again after the final set of items has been decided upon and, in the case of modified items, administered again. 
 
-Another important aspect to keep in mind is that DIF can be caused by one or more items measuring a secondary dimension in addition to the dimension that is intended to be measured by the test. This would be the case in test inteded to measure math aptitude containing pure algebra problems as well as story problems. Students whose native language is not the same as the test language can have disadvantage in answering the story problems, for example when they contain seldomly used words. These items will then show DIF between native and non-native speakers. When encountering this, the test developers will have to decide whether the items with story problems should be excluded from the test, whether they can be improved, e.g., by using more frequently used words, or whether the test should be considered two-dimensional rather than one-dimensional \citep[see also][for a discussion of the connection between DIF and multidimensionality]{Ack:1992,Stretal:2021:APM}.
+Another important aspect to keep in mind is that DIF can be caused by one or more items measuring a secondary dimension in addition to the dimension that is intended to be measured by the test. This would be the case in instruments intended to measure math aptitude containing pure algebra problems as well as story problems. Students whose native language is not the same as the test language can have disadvantage in answering the story problems, for example when they contain seldomly used words. These items will then show DIF between native and non-native speakers. When encountering this, the test developers will have to decide whether the items with story problems should be excluded from the test, whether they can be improved, e.g., by using more frequently used words, or whether the test should be considered two-dimensional rather than one-dimensional \citep[see also][for a discussion of the connection between DIF and multidimensionality]{Ack:1992,Stretal:2021:APM}.
 
 We will now illustrate how to use the R packages \texttt{glmertree} and \texttt{psychotree} to conduct the MOB analyses. 
 
@@ -199,7 +197,7 @@ saveRDS(HS_dat, file = "HS_dat.Rda")
 
 To illustrate the use of GLMM trees, we analyze a dataset from \cite{Demi09}, who evaluated long-term benefits of participation in Head Start. Head Start is a federally funded nationwide \todo{what nation?} pre-school program for children from low-income families. \cite{Demi09} compared performance of siblings who differed in their participation in the program using data from the National Longitudinal Survey of Youth (NLSY; REF). 
 
-The sample consists of \Sexpr{length(unique(data$MotherID))} families with at least two children, where at least one child participated in Head Start and at least one child did not participate in Head Start or any other preschool program. Data from children in those families who participated in another preschool program were excluded. As such, siblings who did not participate in Head Start serve as a natural control to assess the effects of participating in Head Start. As the outcome variable, we take the Peabody Picture Vocabulary Test (PPVT; REF) and model PPVT trajectories over time. As the timing metric, we took the square root of the child's age in years, which yielded a pattern of approximately linear increases over time.\todo{this would scare me a little as a reader: how would I know what to do/that I should do this?}
+The sample consists of \Sexpr{length(unique(data$MotherID))} families with at least two children, where at least one child participated in Head Start and at least one child did not participate in Head Start or any other preschool program. Data from children in those families who participated in another preschool program were excluded. As such, siblings who did not participate in Head Start serve as a natural control to assess the effects of participating in Head Start. As the outcome variable, we take the Peabody Picture Vocabulary Test (PPVT; REF) and model PPVT trajectories over time. As the timing metric, we took the square root of the child's age in years, which yielded a pattern of approximately linear increases over time.\todo{this would scare me a little as a reader: how would I know what to do/that I should do this? (Mirka: Maybe we can add that the sqrt or the log is a typical way to model trajectories that first increase rapidly, but then later increase more slowly?)}
 
 Our dataset contains five family characteristics: The mother's score on the Armed Forced Qualification Test (AFTQ), adjusted for age; the families' income (averaged over the years for which data was available); race (Black, Hispanic or White); mother's years of completed education; mother's height. Note that the latter variable is one that should be completely irrelevant for predicting performance on a vocabulary test; it is included here to illustrate that the GLMM tree algorithm can fruitfully distinguish signal from noise variables. The dataset comprises data from families and children for whom complete data was available. 
 
@@ -237,6 +235,7 @@ axis(1, at=sqrt(c(3, 5, 8, 12, 17)), labels=c(3, 5, 8, 12, 17), cex.axis = .8)
 \FloatBarrier
 \subsection{Linear mixed effects model tree}
 
+\todo[inline]{I (Mirka) am confused: the nested structure in this example is timepoints (age) within children? Therefore, ChildID is the cluster-variable.  But then, there should be residual errors between the two children from the same family? In the text it says that this is accounted for by the random intercept, but I don't think this is the case (but maybe I am wrong?). Is it maybe accounted for by the cluster argument that is also said to ChildID? To me, the model specification is not yet clear from the text. Plus: If I am right, and the cluster is the child and the timepoints are on Level-1, I think all the covariates are on Level-2 (child level), and then maybe we should comment on the Type-I error problem?}
 We now test whether the intercepts and slopes of the two regression lines differ as a function of the partitioning variables, using function \verb|lmertree| from R package \textbf{glmertree}:
 
 <<>>=
